<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:background="#ffffff"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
            android:text="@string/BUTTON8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:textStyle="bold"
            android:background="@drawable/custom_button_blue"
            android:textSize="24sp"/>

    <Space android:layout_width="match_parent" android:layout_height="5dp"/>

    <ImageView
            android:contentDescription="@string/description"
            android:src="@drawable/img3_240x320"
            android:layout_width="400dp"
            android:layout_height="200dp"/>

    <TextView
            android:text="@string/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textView17" android:inputType="text" tools:ignore="Autofill"
            android:id="@+id/img3editText1"/>

    <TextView
            android:text="@string/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textView17" android:inputType="text" tools:ignore="Autofill"
            android:id="@+id/img3editText2"/>

    <TextView
            android:text="@string/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textView15" android:inputType="text" tools:ignore="Autofill"
            android:id="@+id/img3editText3"/>

    <TextView
            android:text="@string/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textView17" android:inputType="text" tools:ignore="Autofill"
            android:id="@+id/img3editText4"/>

</LinearLayout>