<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
            <TextView
                    android:text="@string/textView4"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:textAlignment="center"
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img1_240x320"/>
            <Button
                    android:text="@string/BUTTON11"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button11"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img3_240x320"/>
            <Button
                    android:text="@string/BUTTON12"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button12"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img5_240x320"/>
            <Button
                    android:text="@string/BUTTON13"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button13"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img7_240x320"/>
            <Button
                    android:text="@string/BUTTON14"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button14"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img9_240x320"/>
            <Button
                    android:text="@string/BUTTON15"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button15"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img11_240x320"/>
            <Button
                    android:text="@string/BUTTON16"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button16"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img15_240x320"/>
            <Button
                    android:text="@string/BUTTON17"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button17"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img13_240x320"/>
            <Button
                    android:text="@string/BUTTON18"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button18"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img32"/>
            <Button
                    android:text="@string/BUTTON19"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button19"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>

        </LinearLayout>
    </ScrollView>