<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="#ffffff">

    <TextView
            android:text="@string/textView10"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"/>

    <EditText
            android:id="@+id/deleteItem"
            android:hint="@string/textView11"
            tools:ignore="Autofill"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:text="@string/BUTTON10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button10"
            android:textStyle="bold"
            android:background="@drawable/custom_button_blue"
            android:textSize="24sp"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

    <Button
            android:text="@string/BUTTON9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:textStyle="bold"
            android:background="@drawable/custom_button_blue"
            android:textSize="24sp"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

</LinearLayout>