<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:textAlignment="center"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/textView5"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img2_240x320"/>
            <Button
                    android:text="@string/BUTTON20"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button20"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img4_240x320"/>
            <Button
                    android:text="@string/BUTTON21"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button21"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img6_240x320"/>
            <Button
                    android:text="@string/BUTTON22"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button22"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img8_240x320"/>
            <Button
                    android:text="@string/BUTTON23"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button23"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img10_240x320"/>
            <Button
                    android:text="@string/BUTTON24"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button24"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img12_240x320"/>
            <Button
                    android:text="@string/BUTTON25"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button25"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img16"/>
            <Button
                    android:text="@string/BUTTON26"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button26"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
            <ImageView android:contentDescription="@string/description" android:layout_width="150dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img14_240x320"/>
            <Button
                    android:text="@string/BUTTON27"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button27"/>
            <Space android:layout_width="match_parent" android:layout_height="5dp"/>
        </LinearLayout>
    </ScrollView>