<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <ImageView android:contentDescription="@string/description" android:layout_width="200dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img28"/>

            <Button
                    android:text="@string/BUTTON35"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button35"/>

            <Space android:layout_width="match_parent" android:layout_height="5dp"/>

            <ImageView android:contentDescription="@string/description" android:layout_width="200dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img30"/>

            <Button
                    android:text="@string/BUTTON37"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button37"/>

            <Space android:layout_width="match_parent" android:layout_height="5dp"/>

            <ImageView android:contentDescription="@string/description" android:layout_width="200dp" android:layout_height="100dp" android:layout_gravity="center" android:background="@drawable/img31"/>

            <Button
                    android:text="@string/BUTTON38"
                    android:textSize="18sp"
                    android:background="@drawable/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button38"/>

            <Space android:layout_width="match_parent" android:layout_height="5dp"/>

        </LinearLayout>
    </ScrollView>