<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:gravity="center"
                  android:background="#ffffff"
                  android:layout_height="match_parent">


        <Button
                android:text="@string/BUTTON42"
                android:textSize="18sp"
                android:background="@drawable/custom_button_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button42"/>

    <Space android:layout_width="match_parent" android:layout_height="5dp"/>

        <Button
                android:text="@string/BUTTON43"
                android:textSize="18sp"
                android:background="@drawable/custom_button_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button43"/>

    <Space android:layout_width="match_parent" android:layout_height="5dp"/>

        <Button
                android:text="@string/BUTTON44"
                android:textSize="18sp"
                android:background="@drawable/custom_button_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button44"/>

</LinearLayout>